# Support-Operations-OpenEnv

./: .env.example  .gitignore  DELIVERY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICKSTART.md  README.md  SETUP.md  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml  query.md  requirements.txt  verify_setup.py
scripts/: run_baseline.py
server/: app.py
support_ops_env/: __init__.py  client.py  graders.py  models.py  openenv_compat.py  task_bank.py
support_ops_env/server/: __init__.py  __main__.py  app.py  requirements.txt  support_ops_environment.py
tests/: test_support_ops_env.py
